# pysvg2pdf

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
src/: lib.rs
