[package]
name = "pysvg2pdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
target = "x86_64-unknown-linux-gnu"

[lib]
name = "pysvg2pdf"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
usvg = "0.40.0"
svg2pdf = "0.10.0"

[dependencies.pyo3]
version = "0.21.0"
# - "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
# - "extension-module" tells maturin to build a shared library instead of a static library
# that means the library can be imported from Python
features = ["extension-module", "abi3-py38"]

[dev-dependencies]
maturin = "1.5.1"